@@ -35,7 +35,7 @@ public final class DefaultBiNeighborhoodsJoiner<A, B> extends AbstractJoiner<B> 
 
     public static <A, B> DefaultBiNeighborhoodsJoiner<A, B> merge(List<DefaultBiNeighborhoodsJoiner<A, B>> joinerList) {
         if (joinerList.size() == 1) {
-            return joinerList.get(0);
+            return joinerList.getFirst();
         }
         return joinerList.stream().reduce(NONE, DefaultBiNeighborhoodsJoiner::and);
     }
@@ -51,8 +51,8 @@ public final class DefaultBiNeighborhoodsJoiner<A, B> extends AbstractJoiner<B> 
         var castJoinerCount = castJoiner.getJoinerCount();
         var newJoinerCount = joinerCount + castJoinerCount;
         var newJoinerTypes = Arrays.copyOf(this.joinerTypes, newJoinerCount);
-        Function[] newLeftMappings = Arrays.copyOf(this.leftMappings, newJoinerCount);
-        Function[] newRightMappings = Arrays.copyOf(this.rightMappings, newJoinerCount);
+        var newLeftMappings = Arrays.copyOf(this.leftMappings, newJoinerCount);
+        var newRightMappings = Arrays.copyOf(this.rightMappings, newJoinerCount);
         for (var i = 0; i < castJoinerCount; i++) {
             var newJoinerIndex = i + joinerCount;
             newJoinerTypes[newJoinerIndex] = castJoiner.getJoinerType(i);
@@ -63,9 +63,9 @@ public final class DefaultBiNeighborhoodsJoiner<A, B> extends AbstractJoiner<B> 
     }
 
     /**
-     * @return this if already equal-first (or single joiner); otherwise a copy with all
-     *         {@link JoinerType#EQUAL} joiners moved to the front (stable, see
-     *         {@link AbstractJoiner#equalsFirstSortedPositions}).
+     * @return this if already equal-first (or single joiner);
+     *         otherwise a copy with all {@link JoinerType#EQUAL} joiners moved to the front
+     *         (stable, see {@link AbstractJoiner#equalsFirstSortedPositions}).
      */
     public DefaultBiNeighborhoodsJoiner<A, B> reorderedEqualsFirst() {
         var order = equalsFirstSortedPositions(joinerTypes);
@@ -73,9 +73,9 @@ public final class DefaultBiNeighborhoodsJoiner<A, B> extends AbstractJoiner<B> 
             return this;
         }
         var count = order.length;
-        Function[] newLeftMappings = new Function[count];
+        var newLeftMappings = new Function[count];
         var newJoinerTypes = new JoinerType[count];
-        Function[] newRightMappings = new Function[count];
+        var newRightMappings = new Function[count];
         for (var i = 0; i < count; i++) {
             var from = order[i];
             newLeftMappings[i] = leftMappings[from];
@@ -87,6 +87,11 @@ public final class DefaultBiNeighborhoodsJoiner<A, B> extends AbstractJoiner<B> 
 
     public Function<A, Object> getLeftMapping(int index) {
         return leftMappings[index];
+    }
+
+    @Override
+    public boolean requiresRandomAccess() {
+        return true;
     }
 
     public boolean matches(A a, B b) {
